software-factory/api-products/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-products
  namespace: api-products
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db-products
  template:
    metadata:
      labels:
        app: db-products
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage-products
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage-products
          persistentVolumeClaim:
            claimName: db-pvc-products
