software-factory/api-products/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service-products
  namespace: api-products
spec:
  selector:
    app: db-products
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
