software-factory/api-products/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-products-service
  namespace: api-products
spec:
  type: ClusterIP
  selector:
    app: api-products
  ports:
    - port: 3002
      targetPort: 3000
